--- a/section5/u-survey/src/App.css
+++ b/section5/u-survey/src/App.css
@@ -95,3 +95,9 @@ input[type="radio"] {
   -webkit-box-shadow: 0 5px 0 0 rgba(178,49,49,1) ;
   box-shadow: 0 5px 0 0 rgba(178,49,49,1) ;
 }
+
+.namy {
+  font-size: 1rem;
+  padding: 10px;
+  border-radius: 3px;
+}
