--- a/section5/firebase-login/src/App.css
+++ b/section5/firebase-login/src/App.css
@@ -67,9 +67,14 @@ button {
   margin-right: 10px;
 }
 
-p{
-  color: orange;
-  text-decoration: underline;
+p.error{
+  color: white;
+  background-color: rgba(255, 0, 0, .5);
+  padding: 30px;
+  border-radius: 5px;
+  display: block;
+  width: 480px;
+  margin: 20px auto 0px auto;
 }
 
 .hide{
