--- a/section5/firebase-login/src/App.css
+++ b/section5/firebase-login/src/App.css
@@ -67,14 +67,22 @@ button {
   margin-right: 10px;
 }
 
-p.error{
+p{
   color: white;
-  background-color: rgba(255, 0, 0, .5);
-  padding: 30px;
+  font-size: 30px;
+  padding: 20px 10px;
   border-radius: 5px;
   display: block;
   width: 480px;
   margin: 20px auto 0px auto;
+}
+
+.error {
+  background-color: rgba(255, 0, 0, .5);
+}
+
+.success {
+  background-color: rgba(0, 255, 0, .5);
 }
 
 .hide{
