--- a/youtube-fetch/src/App.css
+++ b/youtube-fetch/src/App.css
@@ -26,3 +26,19 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+body {
+  background-color: #2980b9;
+}
+
+.youtube {
+  border: 2px #2c3e50 dashed;
+  margin-top: 20px;
+}
+
+button {
+  margin: 20px;
+  padding: 20px;
+  font-size: 1rem;
+  background-color: orange;
+}
